# step-functions-adapter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  model.rs
tests/: serverless.yml
